[package]
name = "axle"
version = "0.1.0"
authors = ["Ognyan Genev <ognian.genev@gmail.com>"]
edition = "2021"
rust-version = "1.62.1"

[dependencies]
structopt = "0.3"
tracing = "0.1.37"
tracing-subscriber = { version="0.3.16", features = ["env-filter"]}

[workspace]
members = [
    "simulators/portal-wire/testnet",
    "libdocker"
]
