[package]
name = "axle"
version = "0.1.0"
authors = ["Ognyan Genev <ognian.genev@gmail.com>"]
edition = "2021"
rust-version = "1.62.1"

[dependencies]
anyhow = "1.0.66"
libdocker = { path = "libdocker" }
inventory = { path = "inventory" }
regex = "1.7.0"
structopt = "0.3"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version="0.3.16", features = ["env-filter"]}
walkdir = "2.3.2"

[workspace]
members = [
    "simulators/portal-wire/testnet",
    "libdocker",
    "inventory"
]
