[package]
name = "docker"
version = "0.1.0"
authors = ["Ognyan Genev <ognian.genev@gmail.com>"]
edition = "2021"
rust-version = "1.62.1"

[dependencies]
anyhow = "1.0.66"
bollard = "0.13"
inventory = {path = "../inventory"}
tar = "0.4"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = "0.1.11"
tracing = "0.1.37"
